Spacing issue on /account/upgrade page

--- a/cypherpunk-com/src/app/layouts/account/upgrade/upgrade.component.scss
+++ b/cypherpunk-com/src/app/layouts/account/upgrade/upgrade.component.scss
@@ -149,7 +149,7 @@
     .btn { width: 280px; margin: 0; }
   }
 
-  .agree { font-size: 14px; padding: 40px 0 0; }
+  .agree { font-size: 14px; padding: 20px 0 0; }
 }
 
 .footer {
